# octave-instrument-control

./: .gitignore  COPYING  DESCRIPTION  INDEX  NEWS  README  inittb.m
devel/: README  testtcp.m
devel/gpibenet_tb/: gpibenet_open.m
devel/modbus/: bandwidth_client.m  random_test_client.m
examples/: hp4195a.m  serialtest.m  zvl6.m
gpib_tb/: Makefile  build.sh  gpib.cc  gpib_class.cc  gpib_class.h  gpib_close.cc  gpib_read.cc  gpib_timeout.cc
inst/: clrdevice.m  modbus.m  spoll.m  trigger.m
inst/@octave_gpib/: fclose.m  fopen.m  fprintf.m  fscanf.m  fwrite.m
inst/@octave_i2c/: fclose.m  fopen.m
inst/@octave_serial/: fclose.m  fopen.m  get.m  set.m  srl_baudrate.m  srl_bytesize.m  srl_close.m  srl_flush.m  srl_parity.m  srl_stopbits.m  srl_timeout.m
inst/@octave_tcpip/: fclose.m  fopen.m
inst/@octave_usbtmc/: fclose.m  fopen.m
inst/@octave_vxi11/: fclose.m  fopen.m
legacy/: TODO
legacy/examples/: hc4057.m  pm6666.m  telnetlogin.m  urv35.m
legacy/gpib_tb/: .gitignore  41-gpib-permissions.rules.template  gpib.conf  gpib_tb.cc
legacy/ser_tb/: README  ser_readto2.m
legacy/vxi11_tb/: build.sh  vxi11_tb.cc
ser_tb/: build.sh  ser_readto.m  ser_tb.cc
src/: Makefile  Makefile.in  bootstrap  config.h.in  configure  configure.ac
src/gpib/: Makefile  Makefile.in  __gpib_clrdevice__.cc  __gpib_spoll__.cc  __gpib_trigger__.cc  gpib.cc  gpib_class.cc  gpib_class.h  gpib_close.cc  gpib_read.cc  gpib_spoll.cc  gpib_timeout.cc  gpib_write.cc
src/i2c/: Makefile  Makefile.in  i2c.cc  i2c_addr.cc  i2c_class.cc  i2c_class.h  i2c_close.cc  i2c_read.cc  i2c_write.cc
src/modbus/: Makefile.in  modbus.cc  modbus_class.cc  modbus_class.h
src/modbus/orig/octave-modbus/: Makefile  README  modbus_constants.m
src/modbus/orig/octave-modbus/src/: oct-modbus.cpp
src/parallel/: Makefile  Makefile.in  parallel.cc  parallel_class.cc  parallel_class.h  pp_close.cc  pp_ctrl.cc  pp_data.cc  pp_datadir.cc  pp_stat.cc
src/serial/: Makefile  Makefile.in  __srl_properties__.cc  serial.cc  serial_class.cc  serial_class.h  serial_class_lin.cc  serial_class_lin.h  serial_class_win32.cc  serial_class_win32.h  srl_baudrate.cc  srl_bytesize.cc  srl_close.cc  srl_flush.cc  srl_parity.cc  srl_read.cc  srl_stopbits.cc  srl_timeout.cc  srl_write.cc
src/tcp/: Makefile  Makefile.in  tcp.cc  tcp_class.cc  tcp_class.h  tcp_close.cc  tcp_read.cc  tcp_timeout.cc  tcp_write.cc
src/usbtmc/: Makefile.in  usbtmc.cc  usbtmc_class.cc  usbtmc_class.h  usbtmc_close.cc  usbtmc_read.cc  usbtmc_write.cc
src/visa/: Makefile
src/vxi11/: Makefile  Makefile.in  vxi11.cc  vxi11.x  vxi11_class.cc  vxi11_class.h  vxi11_close.cc  vxi11_read.cc  vxi11_write.cc
tcp_tb/: README  build.sh  tcp.cc  tcp_class.cc  tcp_read.cc  tcp_readto.m  tcp_tb.cc  tcp_timeout.cc  tcp_write.cc
usbtmc_tb/: Makefile  README  build.sh  usbtmc.cc  usbtmc_class.cc  usbtmc_class.h  usbtmc_tb.cc  usbtmc_write.cc
visa_tb/: build.sh  visa_tb.cc
vxi11_tb/: .gitignore
